@@ -49,12 +49,14 @@ public:
     void     setFont( const QFont& );
     void     addBrowser( QWidget*, const QString&, const QString& );
     void     removeBrowser( const QCString& );
-
+    int      currentIndex() { return m_currentIndex; }
+    
 protected:
     bool eventFilter( QObject*, QEvent* );
     bool event( QEvent* );
 
 public slots:
+    void showBrowser( int index ) { if ( index != currentIndex() ) showHideBrowser( index ); }
     void showHideBrowser( int );
     void autoCloseBrowsers();
     void closeCurrentBrowser() { showHideBrowser( m_currentIndex ); }
